--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <p><b>Ph.D. student</b>  </p>
 <p><a href="http://www.cse.cuhk.edu.hk" target=&ldquo;blank&rdquo;>Department of Computer Science and Engineering</a> <br />
 <a href="http://www.cuhk.edu.hk/english/index.html" target=&ldquo;blank&rdquo;>The Chinese University of Hong Kong</a> <br />
-<b>Office</b>: <br />
-<b>Email</b>: <br /></p>
+<b>Supervisor</b>: <a href="https://www.cse.cuhk.edu.hk/~byu/" target=&rdquo;blank&ldquo;>Prof. Bei YU</a><br />
+<b>Email</b>: <a href="jhxu24@cse.cuhk.edu.hk" target=&rdquo;blank&ldquo;>jhxu24@cse.cuhk.edu.hk</a><br /></p>
 </td></tr></table>
 <h2>Biography</h2>
 <p>I'm a Ph.D. student at the <a href="http://www.cse.cuhk.edu.hk" target=&ldquo;blank&rdquo;>Department of Computer Science and Engineering</a>,  
@@ -28,15 +28,25 @@ Previously, I received my bachelor degree from <a href="https://www.zlc.tsinghua
 <p>My research interests include heuristic and parallel algorithms for EDA.</p>
 <h2>Publications</h2>
 <ul>
-<li><p>[J1] <b>Jiahao Xu</b>, Yibin Zhang, Shenghan Gao, Jiecheng Huang, Ming Yang, and Wenjian Yu,
+<li><p>[C1] <b>Jiahao Xu</b>, Yibin Zhang, Shenghan Gao, Jiecheng Huang, Ming Yang, and Wenjian Yu,
 &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10219380" target=&rdquo;blank&ldquo;>A 2-D Multi-Dielectric Capacitance Solver Based on Floating Random Walk Method</a>&rdquo;,
 in 2023 China Semiconductor Technology International Conference (CSTIC), Shanghai, China, 2023, pp. 1-3.</p>
+<li><p>[C2] Shengbo Tong, Haoyuan Li, <b>Jiahao Xu</b>, Chunyan Pei, Wenjian Yu, Shengjun Liu, and Jian Shen. 2025. &ldquo;<a href="https://dl.acm.org/doi/abs/10.1145/3676536.3676680" target=&rdquo;blank&ldquo;>EasyPart: An Effective and Comprehensive Hypergraph Partitioner for FPGA-based Emulation</a>&rdquo;. In Proceedings of the 43rd IEEE/ACM International Conference on Computer-Aided Design (ICCAD '24). Association for Computing Machinery, New York, NY, USA, Article 103, 1–9. https://doi.org/10.1145/3676536.3676680</p>
+<li><p>[C3] <b>Jiahao Xu</b>, Chunyan Pei, Shengbo Tong, and Wenjian Yu. 2025. &ldquo;<a href="https://dl.acm.org/doi/abs/10.1145/3658617.3697758" target=&rdquo;blank&ldquo;>Efficient Hypergraph Modeling of VLSI Circuits for the MFS-Based Emulation and Simulation Acceleration</a>&rdquo;. In Proceedings of the 30th Asia and South Pacific Design Automation Conference (ASPDAC '25). Association for Computing Machinery, New York, NY, USA, 1314–1320. https://doi.org/10.1145/3658617.3697758</p>
+<li><p>[J1] <b>Jiahao Xu</b>, Zhuolun He, Shuo Yin, Yuan Pu, Wenjian Yu, and Bei Yu. 2025. &ldquo;<a href="https://dl.acm.org/doi/full/10.1145/3723044" target=&rdquo;blank&ldquo;>EasyMRC: Efficient Mask Rule Checking via Representative Edge Sampling</a>&rdquo;. 
+  ACM Trans. Des. Autom. Electron. Syst. 30, 3, Article 47 (May 2025), 19 pages. https://doi.org/10.1145/3723044</p>
 </li>
 </ul>
 
 <h2>Selected Awards</h2>
 <table id="noborder">
 <tr class="r1"><td class="c1">The 46th ICPC Asia Regional Contest Jinan Site 2021 Gold Medal         </td><td class="c2"> ICPC  </td><td class="c3"> 2021  </td></tr>
+<tr class="r1"><td class="c1">The 36th National Olympiad in Informatics Silver Medal        </td><td class="c2"> NOI  </td><td class="c3"> 2019  </td></tr>
+
+<h2>Education</h2>
+<table id="noborder">
+<tr class="r1"><td class="c1">Ph.D., Computer Science and Engineering, The Chinese University of Hong Kong (CUHK), Aug/2024 - Now         </td></tr>
+<tr class="r1"><td class="c1">Bachelor of Science, Information and Computing Science, Zhili College, Tsinghua University (THU), Sep/2020 - June/2024         </td></tr>
 </td></tr></table>
 </div>
 </body>
