--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ in 2023 China Semiconductor Technology International Conference (CSTIC), Shangha
 <table id="noborder">
 <tr class="r1"><td class="c1">The 46th ICPC Asia Regional Contest Jinan Site 2021 Gold Medal         </td><td class="c2"> ICPC  </td><td class="c3"> 2021  </td></tr>
 <tr class="r1"><td class="c1">The 36th National Olympiad in Informatics Silver Medal        </td><td class="c2"> NOI  </td><td class="c3"> 2019  </td></tr>
-
+</table>
 <h2>Education</h2>
 <table id="noborder">
 <tr class="r1"><td class="c1">Ph.D., Computer Science and Engineering, The Chinese University of Hong Kong (CUHK), Aug/2024 - Now         </td></tr>
